src/objects/Programacion_cita__mdt.object
<CustomObject>
    <description>Contiene configuraciones para las programaciones de las citas de servicio en función de la compañía, gremio, código postal, etc.</description>
    <fields>
        <fullName>PRC_CAS_Capital_Provincia__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determina si la configuración aplica para registros relacionados con una capital de provincia.</description>
        <label>Capital de provincia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRC_NUM_Plazo__c</fullName>
        <description>Horas que se aplaza la cita de servicio.</description>
        <label>Plazo (horas)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRC_TXT_Gremios__c</fullName>
        <description>Gremios para los que aplica la configuración.</description>
        <label>Gremios</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC_TXT_Identificador_CIA__c</fullName>
        <description>Identificador de la compañía.</description>
        <label>Identificador de la compañía</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC_TXT_Segmentacion__c</fullName>
        <description>Segmentación de la cuenta (Normal, Vip, Valor, Oro, Premium)</description>
        <label>Segmentación</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Programación cita</label>
    <pluralLabel>Programaciones citas</pluralLabel>
</CustomObject>